# todo_napa

./: .gitignore  Makefile  pyproject.toml
assets/bootstrap/js/: bootstrap.bundle.js
root/: settings.py  urls.py
templates/layouts/: base.html  navbar.html
templates/main/: home.html  login.html  logout.html  profile.html  registration.html  task_create.html  task_delete.html  task_detail.html  task_list.html  task_update.html
todo/: admin.py  forms.py  models.py  urls.py  views.py
todo/migrations/: 0001_initial.py
user/: admin.py  forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_usermodel_image.py  0003_rename_image_usermodel_usr_img.py
